<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:contentDescription="@string/imgDesc_Jrkgbites_logo"
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/official_jrkgbites_nobg"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="@id/guide_top" />

    <TextView
        android:id="@+id/txtWelcomeDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        android:layout_marginTop="-20dp"
        android:textAlignment="center"
        android:textSize="@dimen/txt_display"
        android:text="@string/display_Login"
        >
    </TextView>

    <TextView
        android:id="@+id/txtLoginHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtWelcomeDisplay"
        android:layout_marginTop="@dimen/spacing_standard"
        android:textAlignment="center"
        android:textSize="@dimen/txt_headline"
        android:text="@string/header_Login"
        >
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        style="@style/InputRounded"
        app:layout_constraintTop_toBottomOf="@id/txtLoginHeader"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etHint_Email"
            android:textSize="@dimen/txt_subheading"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_standard"
        style="@style/InputRounded"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etHint_Password"
            android:inputType="textPassword"
            android:textSize="@dimen/txt_subheading" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxKeepMeLoggedIn"
        android:layout_width="0dp"
        android:layout_height="@dimen/touchtarget_min"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        style="@style/CheckBoxPrimary"
        android:layout_marginTop="@dimen/spacing_standard"
        android:textSize="@dimen/txt_label"
        android:text="@string/checkboxLabel_AutoLogin">

    </com.google.android.material.checkbox.MaterialCheckBox>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/touchtarget_min"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:text="@string/linkLabel_ForgotPassword"
        android:layout_marginTop="@dimen/spacing_standard"
        android:textSize="@dimen/txt_label"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/ButtonPrimary"
        android:layout_width="0dp"
        android:text="@string/btnLabel_Login"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPassword"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end" />

    <TextView
        android:id="@+id/txtAltLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:text="@string/lbl_AltLogin"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/spacing_standard"
        android:textSize="@dimen/txt_label"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBioAuth"
        style="@style/ButtonOutlined"
        app:icon="@drawable/fingerprint_dialog_fp_icon"
        app:iconTint="@color/dark"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/spacing_standard"
        android:text="@string/btnLabel_BioAuth"
        app:layout_constraintTop_toBottomOf="@id/txtAltLogin"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end" />

    <TextView
        android:id="@+id/txtBeforeGotoRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/touchtarget_min"
        app:layout_constraintBottom_toBottomOf="@id/txtGotoRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtGotoRegister"
        android:text="@string/lbl_BeforeGoToRegister"
        android:gravity="center_vertical|end"
        android:textSize="@dimen/txt_body"/>

    <TextView
        android:id="@+id/txtGotoRegister"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touchtarget_min"
        app:layout_constraintTop_toBottomOf="@id/btnBioAuth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/linkLabel_GoToRegister"
        android:textColor="@color/primary"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginEnd="-150dp"
        android:layout_marginTop="@dimen/spacing_huge"
        android:textSize="@dimen/txt_body"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>