<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageButton
        android:contentDescription="@string/imgDesc_ic_back_chevron"
        android:id="@+id/btnBack"
        android:layout_width="@dimen/touchtarget_min"
        android:layout_height="@dimen/touchtarget_min"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back"

        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="@id/guide_top" />



    <TextView
        android:id="@+id/txtRegisterDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/display_Register"
        android:textAlignment="textStart"
        android:textSize="@dimen/txt_display"
        android:layout_marginHorizontal="@dimen/spacing_standard"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/btnBack">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        style="@style/InputRounded"
        app:layout_constraintTop_toBottomOf="@id/txtRegisterDisplay"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etHint_Username"
            android:textSize="@dimen/txt_subheading" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_standard"
        style="@style/InputRounded"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etHint_Email"
            android:textSize="@dimen/txt_subheading"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_standard"
        style="@style/InputRounded"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etHint_Password"
            android:inputType="textPassword"
            android:textSize="@dimen/txt_subheading" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_standard"
        style="@style/InputRounded"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etHint_ConfirmPassword"
            android:inputType="textPassword"
            android:textSize="@dimen/txt_subheading" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxAgreement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="@dimen/spacing_standard"
        android:textSize="@dimen/txt_body"

        android:text="@string/checkboxLabel_TermsAgreement">

    </com.google.android.material.checkbox.MaterialCheckBox>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/ButtonPrimary"
        android:layout_width="0dp"
        android:text="@string/btnLabel_Register"
        android:layout_marginTop="@dimen/spacing_huge"
        app:layout_constraintTop_toBottomOf="@id/checkboxAgreement"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end" />

    <TextView
        android:id="@+id/txtBeforeGotoRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/touchtarget_min"
        app:layout_constraintBottom_toBottomOf="@id/txtBackToLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtBackToLogin"
        android:text="@string/lbl_BeforeGoToRegister"
        android:gravity="center_vertical|end"
        android:textSize="@dimen/txt_body"/>

    <TextView
        android:id="@+id/txtBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touchtarget_min"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lbl_GoToLogin"
        style="@style/SpecialLinkText"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/spacing_huge"
        android:layout_marginEnd="-150dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:textSize="@dimen/txt_body"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>