<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_standard">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <TextView
        android:id="@+id/txtDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintEnd_toEndOf="@id/tilEmail"
        android:layout_marginTop="0dp"
        android:textAlignment="textStart"
        android:textSize="@dimen/txt_display"
        android:text="@string/display_ForgotPasswordDialog"
        >
    </TextView>

    <TextView
        android:id="@+id/txtSubdisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtDisplay"
        android:layout_marginTop="@dimen/spacing_standard"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintEnd_toEndOf="@id/tilEmail"
        android:textAlignment="center"
        android:textSize="@dimen/txt_headline"
        android:text="@string/header_ForgotPasswordDialog"
        >
    </TextView>

    <TextView
        android:id="@+id/txtInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtSubdisplay"
        android:layout_marginTop="@dimen/spacing_huge"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintEnd_toEndOf="@id/tilEmail"
        android:gravity="start"
        android:textSize="@dimen/txt_subheading"
        android:paddingHorizontal="5dp"
        android:text="@string/instructions_ForgotPasswordDialog"
        >
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_standard"
        style="@style/InputRounded"
        app:layout_constraintTop_toBottomOf="@id/txtInstructions"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etHint_Email"
            android:textSize="@dimen/txt_subheading"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        style="@style/ButtonPrimary"
        android:layout_width="0dp"
        android:text="@string/btnLabel_Submit"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintEnd_toEndOf="@id/tilEmail" />

    <LinearLayout
        android:id="@+id/touchBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touchtarget_min"
        android:layout_marginTop="@dimen/spacing_huge"
        android:layout_marginBottom="@dimen/spacing_large"
        android:orientation="horizontal"
        android:layout_marginStart="-32dp"
        app:layout_constraintStart_toStartOf="@+id/tilEmail"
        app:layout_constraintEnd_toEndOf="@+id/tilEmail"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/imgBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touchtarget_min"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginEnd="@dimen/spacing_standard"
            android:contentDescription="@string/imgDesc_ic_back_chevron"
            android:foregroundGravity="right" />

        <TextView
            android:id="@+id/txtBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_BackToLogin"
            android:gravity="center"
            android:textSize="@dimen/txt_body"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>